very simple and dirty find usage, but it is work!